Estilização nas páginas do projeto

--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dev News">
     <meta name="keywords" content="technology,development,news,computing,code">
-    <title>Institucional</title>
+    <title>Institucional - Dev News</title>    
+    <link rel="shortcut icon" href="./arquivos/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400;500;700&display=swap"
