--- a/precos.html
+++ b/precos.html
@@ -11,7 +11,8 @@
         rel="stylesheet">
     <meta name="description" content="Dev News">
     <meta name="keywords" content="technology,development,news,computing,code">
-    <title>Tabela de preços</title>
+    <title>Tabela de preços - Dev News</title>
+    <link rel="shortcut icon" href="./arquivos/favicon.ico" type="image/x-icon">
     <style>
         * {
             margin: 0;
