Criação de Loader + Organização das pastas e arquivos

--- a/DevNEWS/pages/contato.html
+++ b/DevNEWS/pages/contato.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400;500;700&display=swap"
         rel="stylesheet">
     <title>Fale conosco - Dev News</title>
-    <link rel="shortcut icon" href="./arquivos/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <style>
         * {
             margin: 0;
@@ -241,11 +241,11 @@
         </div>
         <nav>
             <ul class="navbar">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="about-us.html">Institucional</a></li>
                 <li class="nav-item"><a class="nav-link" href="precos.html">Tabela de preços</a></li>
                 <li class="nav-item"><a class="nav-link" href="cadastro.html">Cadastro</a></li>
-                <li class="nav-item"><a class="nav-link active" href="contato.html">Contato</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#">Contato</a></li>
             </ul>
         </nav>
         <div>
@@ -254,7 +254,7 @@
                     aria-label="Search" autocomplete="off" onfocus="this.value='';" />
                 <button type="submit" id="btn-search" name="btn-search" class="search-btn"
                     formaction="https://www.google.com/search?q=">
-                    <img id="searchBtn" src="arquivos/magnify.svg" width="30px" height="20px">
+                    <img id="searchBtn" src="../assets/images/magnify.svg" width="30px" height="20px">
                 </button>
             </form>
         </div>
