--- a/DevNEWS/pages/galeria.html
+++ b/DevNEWS/pages/galeria.html
@@ -35,7 +35,7 @@
         <h1>Galeria de fotos</h1>
     </header>
     <div class="destaque">
-        <video controls muted autoplay poster="arquivos/about-2.jpg" src="arquivos/motivation.mp4"></video>
+        <video controls muted autoplay poster="assets/images/about-2.jpg" src="arquivos/motivation.mp4"></video>
         <!-- <picture>
             <source media="(min-width: 1920px)" srcset="https://via.placeholder.com/1920x300">
             <source media="(min-width: 1200px)" srcset="https://via.placeholder.com/1290x300">
