--- a/DevNEWS/pages/about-us.html
+++ b/DevNEWS/pages/about-us.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Dev News">
     <meta name="keywords" content="technology,development,news,computing,code">
     <title>Institucional - Dev News</title>    
-    <link rel="shortcut icon" href="./arquivos/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400;500;700&display=swap"
@@ -187,8 +187,8 @@
         </div>
         <nav>
             <ul class="navbar">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link active" href="about-us.html">Institucional</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#">Institucional</a></li>
                 <li class="nav-item"><a class="nav-link" href="precos.html">Tabela de preços</a></li>
                 <li class="nav-item"><a class="nav-link" href="cadastro.html">Cadastro</a></li>
                 <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
@@ -202,7 +202,7 @@
                 <hr>
                 <!-- <small>Conheça nosso trabalho</small> -->
                 <figure>
-                    <img src="arquivos/about-1.jpg" alt="Nossa empresa">
+                    <img src="../assets/images/about-1.jpg" alt="Nossa empresa">
                 </figure>
                 <header>
                     <h3>Conheça o índice do nosso livro</h3>
