--- a/DevNEWS/pages/precos.html
+++ b/DevNEWS/pages/precos.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Dev News">
     <meta name="keywords" content="technology,development,news,computing,code">
     <title>Tabela de preços - Dev News</title>
-    <link rel="shortcut icon" href="./arquivos/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
     <style>
         * {
             margin: 0;
@@ -216,9 +216,9 @@
         </div>
         <nav>
             <ul class="navbar">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="about-us.html">Institucional</a></li>
-                <li class="nav-item"><a class="nav-link active" href="precos.html">Tabela de preços</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#">Tabela de preços</a></li>
                 <li class="nav-item"><a class="nav-link" href="cadastro.html">Cadastro</a></li>
                 <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
             </ul>
