--- a/DevNEWS/pages/about-us.html
+++ b/DevNEWS/pages/about-us.html
@@ -217,7 +217,7 @@
                     </ol>
                 </div>
                 <footer>
-                    <p>Para mais detalhes, acesse a nossa <a href="../#listaSlider">galeria de notícias</a>.</p>
+                    <p>Para mais detalhes, acesse a nossa <a href="galeria.html">galeria de fotos</a>.</p>
                 </footer>
             </div>
         </section>
